<resources>
    <string name="app_name">TAMBOOM-CHALLENGE</string>
    <string name="app_token">tokn_test_123</string>
    <string name="app_dissmiss">Dismiss</string>
    <string name="app_back">BACK</string>
    <string name="request_charities_url">TAMBOOM-CHALLENGE</string>
    <string name="request_donations_url">TAMBOOM-CHALLENGE</string>
    <string name="request_charities_mock_url">https://dl.dropboxusercontent.com/s/7n2k56oy02u793z/charity-mock-data.json</string>
    <string name="request_donations_mock_url">https://dl.dropboxusercontent.com/s/lqys2iv18ewekj9/donate-success-mock-data.json</string>
    <string name="request_charities_error_message">Cannot load data, please try again.</string>
    <string name="donation_title">Donate</string>
    <string name="donation_confirm_title">Confirm</string>
    <string name="donation_cancel_title">Cancel</string>
    <string name="donation_name_hint">Full name</string>
    <string name="donation_amount_hint">Amount</string>
    <string name="donation_validate_name_fail">Please enter your name.</string>
    <string name="donation_validate_amount_empty">Please enter amount.</string>
    <string name="donation_validate_amount_fail">Amount must be more than zero.</string>
    <string name="donation_error">Donation problem, please try again later.</string>
    <string name="loading_title">LOADING</string>
    <string name="loading_message">Please wait…</string>
    <string name="success_title">Congratulation !</string>
    <string name="success_message">Your donation is successful.</string>
</resources>
