<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/right" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_16dp"
            android:gravity="center"
            android:text="@string/success_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_8dp"
            android:gravity="center"
            android:text="@string/success_message"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="@dimen/button_success_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/app_32dp"
            android:background="@drawable/background_button_confirm"
            android:text="@string/app_back"
            android:textColor="#009688"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>